# hgwatch

./: .gitignore  hgwatch.cabal
app/: Action.hs  Init.hs  Main.hs
app/Control/Monad/: List.hs
