cabal-version:      2.4
name:               hgwatch
version:            0.1.0.0
author:             amhsm6
maintainer:         amhsm6@gmail.com

executable hgwatch
    main-is:          Main.hs

    other-modules:    Action
                      Init

    build-depends:    base ^>=4.16.4.0
                    , mtl
                    , stm
                    , list-t
                    , containers
                    , text
                    , time
                    , aeson
                    , filepath
                    , directory
                    , haskell-tdlib

    hs-source-dirs:   app

    default-language: Haskell2010
